--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@ var statusText;
 
 function preload() {
 //    console.log('preload');
-	game.load.image('boat', '/img/boat.png');
-    game.load.image('compass', '/img/compass.png');
+	game.load.image('boat', 'img/boat.png');
+    game.load.image('compass', 'img/compass.png');
     game.scale.pageAlignHorizontally = true;
     game.scale.pageAlignVertically = true;
 
