--- a/equations.html
+++ b/equations.html
@@ -25,59 +25,43 @@
         return radians * radianToDegreesFactor;
     }
 
-
+    //http://en.wikipedia.org/wiki/Forces_on_sails
     var windVelocity = 10;
     var boatVelocity = 5;
     var trueWindAngle = degToRad(90); //SAIL to true wind Angle
     var heelAngle = 0;
 
+    console.log("Wind: " + windVelocity);
+    console.log("Sail: " + boatVelocity + " @ " + radToDeg(trueWindAngle));
     //rewrite boat forces using Victors
     var boatCourse = new Victor(boatVelocity,0); //5kts to the right
     var wind       = new Victor(0,-windVelocity);
 
+    //To translate Phaser planes to Victor do I use projections? well points are synonymous right?
     var apparentWind = boatCourse.add(wind);
-    console.log("apparent wind: " + apparentWind.length() );
+    console.log("Apparent wind: " + apparentWind.length() + " @ " + -radToDeg(apparentWind.angle()) );
 
+    var aerodynamicCoefficient = 1;//good number for sail, 2 is rigid body
+    var airDensity = 1.2;  //http://en.wikipedia.org/wiki/Density_of_air
+    var sailArea = 10; //in m^2
+    //bernoulli's equation - total force magnitude
+    var constants = 0.5 * airDensity * sailArea * aerodynamicCoefficient;
 
-    //http://en.wikipedia.org/wiki/Forces_on_sails
-    function calculateBoatForces() {
+    var totalSailForce = constants * (Math.pow(apparentWind.length(),2));
 
+    console.log("totalSailForce: " + totalSailForce);
 
+    var sailForce = new Victor();
+    sailForce.magnitude = totalSailForce;
+    sailForce.angle = trueWindAngle + degToRad(90);
 
-//        document.getElementById("wind").html = "10";
-        console.log("Wind: " + windVelocity);
-        console.log("Sail: " + boatVelocity + " @ " + radToDeg(trueWindAngle));
+    //Now we need to normalize the total Sailforce for the direction of the boat
+    //ideally the SAIL attack angle stays at an efficient 45degree angle or so while the boat rotates down
 
-        //apparent wind speed component opposite to boats course
-        var apparentWindOpposite = boatVelocity + windVelocity * Math.cos(trueWindAngle);
-        //apparent wind speed component normal to mast & boat course
-        var apparentWindNormal = windVelocity * Math.sin(trueWindAngle) * Math.cos(heelAngle);
-
-        //Apparent wind velocity to sail
-        var apparentWindVelocity = Math.sqrt( Math.pow(apparentWindOpposite,2) + Math.pow(apparentWindNormal,2) );
-
-        var apparentWindAngle = Math.acos( (apparentWindOpposite / apparentWindVelocity)%1 );
-    console.log("Apparent Wind: " + apparentWindVelocity + " @ " + radToDeg(apparentWindAngle));
-
-        var aerodynamicCoefficient = 1;//good number for sail, 2 is rigid body
-        var airDensity = 1.2;  //http://en.wikipedia.org/wiki/Density_of_air
-        var sailArea = 10; //in m^2
-        //bernoulli's equation - total force magnitude
-        var constants = 0.5 * airDensity * sailArea * aerodynamicCoefficient;
-
-        var totalSailForce = constants * (Math.pow(apparentWindVelocity,2));
-
-        console.log("totalSailForce: " + totalSailForce);
-
-        //Going to vastly oversimplfify keel hydrodynamics
+    //Going to vastly oversimplfify keel hydrodynamics
 //
 //        //forces from keel moving through water
 //        var keelDrag = new Point(0,-200);
-    }
-
-
-
-    calculateBoatForces();
 
     //http://www.ppl-flight-training.com/lift-formula.html
     //KEEL_LIFT = CoefficientOfLift@AngleOfAttack   * 0.5*airDensity * Math.pow(boatSpeed,2) * keelArea
